# Agent_Derma_Doc_Chat

./: .gitignore  README.md  app.py  main.py  merge.py  pyproject.toml  requirements.txt  setup.py  skeleton.txt  template.sh  test.py
dataset/: med_agent_dataset.py
fine_tuned_model/: README.md  adapter_config.json
notebooks/: Qwen2_5_(3B)_Alpaca.ipynb  Untitled3 (1).ipynb  swin-skin-v8.ipynb  swin_model_files.ipynb
src/langgraph_agent/: graph.py  llms.py  nodes.py  state.py  tools.py
swin_model/: config.json  preprocessor_config.json
