[project]
name = "medagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.3.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "pillow>=12.0.0",
    "pinecone>=7.3.0",
    "pypdf>=6.1.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
]
